Add .gitignore and claude agents